--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -7,6 +7,7 @@
     border-radius: 4px;
     font-size: 1.6rem;
     font-weight: 700;
+    font-family: 'ProximaNova', sans-serif;
     cursor: pointer;
     background-color: var(--white);
     border: 1px solid transparent;
@@ -66,7 +67,11 @@
     }
 }
 
-// Disabled
+.icon {
+    display: inline-block;
+    width: 24px;
+    text-align: center;
+}
 
 // Button sizes
 .small {
