--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -6,6 +6,7 @@
     --black: #000;
     --white: #fff;
     --text-color: #161823;
+    --font-family: 'ProximaNova', sans-serif;
     color: var(--text-color);
     --default-layout-header-height: 60px;
     --default-layout-width: 1150px;
@@ -20,7 +21,7 @@ html {
     box-sizing: border-box;
 }
 body {
-    font-family: 'ProximaNova', sans-serif;
+    font-family: var(--font-family);
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizespeed;
