--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -26,6 +26,9 @@
         background-color: rgba(22, 24, 35, 0.03);
     }
 }
+.menu-body {
+    overflow-y: auto;
+}
 // Header
 .header {
     position: relative;
