--- a/src/layouts/components/Search/Search.module.scss
+++ b/src/layouts/components/Search/Search.module.scss
@@ -16,6 +16,7 @@
         height: 100%;
         color: var(--black);
         font-size: 1.6rem;
+        padding-right: 40px;
         caret-color: var(--primary);
         font-family: var(--font-family);
         background-color: transparent;
